css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');

section {
  height: 100vh;
  font-family: 'Roboto', sans-serif;
  padding: 0px;
  margin: 0px;
  font-size: 22px;
}

/* NAVIGATION */
nav {
  background: #fff;
  padding: 0px;
  box-shadow: 0px 5px 0px #d8ecf3;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
}
nav ul {
  list-style: none;
  text-align: center;
}
nav ul li {
  display: inline-block;
}

nav ul li a {
  display: block;
  padding: 15px;
  text-decoration: none;
  color: darkgreen;
  font-weight: 800;
  text-transform: uppercase;
  margin: 0 10px;
}
nav ul li a,
nav ul li a:after,
nav ul li a:before {
  transition: all .5s;
}
nav ul li a:hover {
  /*
  color: darkgreen;*/
  color: black;
}

/* Circle */
nav.circle ul li a {
  position: relative;
  overflow: hidden;
  z-index: 1;
}
nav.circle ul li a:after {
  display: block;
  position: absolute;
  margin: 0;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  content: '.';
  color: transparent;
  width: 1px;
  height: 1px;
  border-radius: 50%;
  background: transparent;
}
nav.circle ul li a:hover:after {
  -webkit-animation: circle 1.5s ease-in forwards;
}

/* Keyframes */
@-webkit-keyframes fill {
  0% {
    width: 0%;
    height: 1px;
  }
  50% {
    width: 100%;
    height: 1px;
  }
  100% {
    width: 100%;
    height: 100%;
    background: #333;
  }
}

/* Keyframes */

@-webkit-keyframes circle {
  0% {
    width: 1px;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    margin: auto;
    height: 1px;
    z-index: -1;
    background: #eee;
    border-radius: 100%;
  }
  100% {
    background: #aaa;
    height: 5000%;
    width: 5000%;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    border-radius: 0;
  }
}

body{
  background: #E3FBE3;
  position: sticky;
}

p {
  font-family: Georgia, serif;
  padding: 0px;
  margin: 0px;
  font-size: 18px;
  color:black;
  margin-left: 50px;
  margin-right: 50px;
  margin-bottom: 0px;
  margin-top:5px;
}

h1{
  font-family: Georgia, serif;
  font-size: 41px;
  padding: 0px;
  margin: 25px;
  text-align: center;
  /*color: #3333A2;*/
  color: darkgreen;
}

h2{
  font-family: 'Georgia', serif;
  padding: 0px;
  font-size:20px;
  /* #00ced1*/
  /*color:royalblue;*/
  color: darkgreen;
  margin-left: 35px;
  margin-bottom:10px;
  margin-top:10px;
  position: sticky;
}

h3 {
  font-family: 'Georgia', serif;
  padding: 0px;
  font-size:20px;
  /*#00ced1*/
  /*#9370DB*/
  color:darkgreen;
  margin: 0px;
  margin-top: 5px;
  margin-bottom: 0px;
  margin-left: 30px;
  position: sticky;
}

h4{
  font-family: Georgia, serif;
  padding: 0px;
  margin: 25px;
  font-size: 18px;
  color:mediumpurple;
  margin-top:10px;
  position: sticky;
}

h5 {
  font-family: Georgia, serif;
  padding: 0px;
  margin: 25px;
  font-size: 18px;
  color:black;
  position: sticky;
}

ul.a{
  font-family: Georgia, serif;
  padding: 30px;
  margin: 0px;
  font-size: 18px;
  color:black;
  margin-left: 30px; 
  margin-bottom: 0px;
  margin-top:0px;
  position: sticky;
}

video {
  display:block;
  margin:0 auto;
  margin-top: 0px;
  width:320px;
  height:240px;
  position: sticky;
}

.image1{
  margin-top: 0px;
  display:block;
  margin:0 auto;
  width:320px;
  height:240px;
  position: sticky;
}

/*add 5 style attributes*/

#map {
  height: 400px;
  width: 100%;
  margin: 0 auto;
  border: 1px solid #ccc;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
  border-radius: 5px;
}

/*
img[name="slide"] {
  display: block;
  margin: auto;
  border: 1px solid black;
}
*/

/* Slideshow */
/*.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

.mySlides {
  display: none;
  width: 100%;
}

.slide-image {
  display: block;
  margin: auto;
  border: 1px solid black;
  width: 400px;
  height: 200px;
  height: auto;
}*/

/* img[name="slide"] {
img[name="slide"] {
  display: block;
  margin: auto;
  border: 1px solid black;
  margin-top: 20px;
  margin-top: 20px;
}*/


.img-small {
  width: 20%;
  float: right;
  margin-right: 50px;
  vertical-align: top;
  margin-top: -100px;
}

.slideshow {
  position: relative;
  height: 400px;
  width: 600px;
  margin: auto;
  margin-top: 10px;
}

.slideshow img {
  position: absolute;
  margin-top: 10px;
  top: 0;
  left: 0;
  width: 20%;
  height: 100%;
  opacity: 0;
  transition: opacity 1s ease-in-out;
  text-align: center;
}

.slideshow img.active {
  text-align:;
  opacity: 1;
}

* {box-sizing: border-box}
.mySlides {display: none}
img {text-align: center;}

/* Slideshow container */
.slideshow-container {
  max-width: 500px;
  position: relative;
  margin: auto;
  text-align: center;
}

/* Hide the images by default */
.mySlides {
  margin-top: 20px;
  display: none;
  justify-content: center;
  align-items: center;
  vertical-align: middle;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: black;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
  text-align: center;
  left: 10px;
}

/* Position the "next button" to the right */
.next {
  right: 10px;
  border-radius: 3px 0 0 3px;
  left: auto;
}

/* On hover, add a black background color with a little bit see-through */


/*make the navigation arrow black*/

.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Caption text */
.text {
  color: black;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: -5px;
  width: 100%;
  text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
  color: black;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  .prev, .next,.text {font-size: 11px}
}

figure {
  width: 200px;
  height: 200px;
}

figure img {
  max-width: 100%;
  max-height: 100%;
}

